--- a/pom.xml
+++ b/pom.xml
@@ -62,4 +62,29 @@
 			<scope>test</scope>
 		</dependency>
   </dependencies>
+  <build>
+     <plugins>
+       <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-compiler-plugin</artifactId>
+         <version>3.7.0</version>
+         <configuration>
+           <source>1.8</source>
+           <target>1.8</target>
+            <encoding>UTF-8</encoding>          
+         </configuration>
+       </plugin>
+       <plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.20</version>
+					<configuration>
+					<testSourceDirectory>restassured-cucumber/src/test/java</testSourceDirectory> 
+						<includes>
+							<include>**/*Runner.java</include>
+						</includes>
+					</configuration>
+				</plugin>              
+       </plugins>
+   </build>
 </project>
